--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@livekit/components-styles": "1.1.5",
     "@livekit/krisp-noise-filter": "0.2.16",
     "@livekit/track-processors": "^0.5.4",
+    "antd": "^5.24.8",
     "livekit-client": "2.11.2",
     "livekit-server-sdk": "2.12.0",
     "next": "15.2.4",
